resolve navbar position and index collapse view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,8 @@
 @import './about.css';
 
-body {
+body, html {
     margin: 0px;
+    width: 100%;
     font-family: 'Ubuntu', sans-serif;
 }
 
@@ -14,7 +15,9 @@ hr {
 .nav-wrapper {
     height: 9vh;
     position: fixed;
-    width: 100vw;
+    width: 100%;
+    top: 0;
+    right: 0;
     z-index: 1;
     display: flex;
     justify-content: space-between;
@@ -35,8 +38,13 @@ hr {
     text-decoration: none;
 }
 
+.nav-left-side {
+    padding-left: 100px;
+}
+
 .nav-right-side {
     display: flex;
+    padding-right: 100px;
 }
 
 .nav-wrapper > .nav-right-side > div {
@@ -58,6 +66,7 @@ hr {
 }
 
 .nav-burger-wrapper {
+    padding-right: 100px;
     display: none;
     visibility: hidden;
 }
@@ -78,7 +87,6 @@ hr {
 .container {
     display: grid;
     grid-template-columns: 1fr;
-    /* width: 100%; */
 }
 
 .extend-h {
@@ -112,13 +120,24 @@ hr {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     height: 100vh;
     width: 100%;
     position: absolute;
     z-index: 1;
     display: none;
     visibility: hidden;
+}
+
+.banner-container-overlay button {
+    outline: none;
+    cursor: pointer;
+    line-height: 6px;
+    border-radius: 5px;
+    padding: 5px 10px;
+    background-color: transparent;
+    border: 1px solid white;
+    color: white;
 }
 
 .banner-container-overlay a {
@@ -129,7 +148,7 @@ hr {
     transition: border-color 0.7s;
     padding: 0.3em;
     cursor: pointer;
-    font-size: 3em;
+    font-size: 2em;
 }
 
 .banner-container-fluid {
